Add css to new exam

--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: url(/img/trianglify.png);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+form{
+  padding: 20px;
+  margin-top: 60px;
+}
+
+form button{
+  margin: 20px 15px;
 }
