--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,16 @@ form{
 form button{
   margin: 20px 15px;
 }
+
+.preloader-background {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	
+	position: fixed;
+	z-index: 100;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;	
+}
